# bilibili-comment-cleaning

./: Cargo.toml  README.md  my_project.bundle  todo.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: build.rs  lib.rs  main.rs
src/http/: api_service.rs  comment.rs  danmu.rs  mod.rs  notify.rs  qr_code.rs  utility.rs
src/http/comment/: aicu.rs  official.rs
src/http/danmu/: aicu.rs  official.rs
src/http/response/: aicu.rs  mod.rs  official.rs
src/pages/: cookie_page.rs  fetched_page.rs  fetching_page.rs  mod.rs  qrcode_page.rs
src/screens/: cookie.rs  fetching.rs  main.rs  mod.rs  qrcode.rs
src/screens/main/: comment_viewer.rs  danmu_viewer.rs  notify_viewer.rs
src/types/: mod.rs
