[package]
name = "bilibili-comment-cleaning"
authors = ["Initsnow <inksnow2233@gmail.com>"]
version = "0.6.2"
license = "GPL-3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
iced = { version = "0.13.1", features = ["tokio", "image", "qr_code"] }
indicatif = "0.17.8"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["cookies", "json", "rustls-tls"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
